# textToPdfConverter

./: CMakeLists.txt  README.md
include/: header.h
src/: input.c  input.txt  interface.c  main.c  txtToPdf.c
